@@ -3,37 +3,23 @@ OLE-WORKSHOP
 
 #Prerequisites
 
-Install Java 7
+#####Install git
 
-Install Tomcat 7
+#####Install Java 7
 
-Install Mysql
+#####Install Tomcat 7
+
+#####Install Mysql
 
 #####Edit mysql config to allow lower case table names. Add the following to [mysqld] in my.cnf
-'''
+```
 [mysqld]
 lower_case_table_names=1
-'''
-
-Restart mysql
-
-#Option 1: Building from Source
-
-Install maven
-
-Install ant
-
-Install git
-
-#####Create liquibase and user
-
-```
-mysql> create database LIQUIBASEBLANK;
-mysql> create user 'LIQUIBASEBLANK'@'localhost' identified by 'LIQUIBASEBLANK';
-mysql> grant all privileges on LIQUIBASEBLANK.* to 'LIQUIBASEBLANK'@'localhost' identified by 'LIQUIBASEBLANK';
 ```
 
-#####checkout the workshop file data
+#####Restart mysql
+
+#####Checkout the workshop file data
 ```
 mkdir ~/OLE
 cd ~/OLE
@@ -41,10 +27,31 @@ git clone https://github.com/VU-libtech/OLE-WORKSHOP.git
 git clone https://github.com/VU-libtech/OLE-INST.git
 ```
 
-#####edit environment variables in OLE-WORKSHOP/env.sh
+#####Edit environment variables in ~/OLE/OLE-WORKSHOP/env.sh
+```
+export JAVA_HOME=/usr/lib/jvm/java-7-openjdk-amd64
+export JAVA_OPTS="-Xmx2g -Xms2g -XX:MaxPermSize=1g"
+export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=768m"
+export CATALINA_HOME=/usr/local/tomcat
+export OLE_DEVELOPMENT_WORKSPACE_ROOT=~/OLE/OLE-INST
+```
 
 #####implement environment variables
     source ~/OLE/OLE-WORKSHOP/env.sh
+    
+#Option 1: Building from Source
+
+#####Install maven
+
+#####Install ant
+
+#####Setup the Liquibase build
+
+```
+mysql> create database LIQUIBASEBLANK;
+mysql> create user 'LIQUIBASEBLANK'@'localhost' identified by 'LIQUIBASEBLANK';
+mysql> grant all privileges on LIQUIBASEBLANK.* to 'LIQUIBASEBLANK'@'localhost' identified by 'LIQUIBASEBLANK';
+```
     
 #####edit ~/OLE/OLE-WORKSHOP/config/common-config.xml
 ```
@@ -67,7 +74,7 @@ cd ~/OLE/OLE-WORKSHOP
 ./build.sh
 ```
 
-#Deployment
+#Option 2: Deployment
 
 #####If you are skipping the build section, you'll need to grab the OLE apps from github
 ```
@@ -75,7 +82,7 @@ wget https://github.com/VU-libtech/OLE-WORKSHOP/releases/download/0.1.0/olefs.wa
 wget https://github.com/VU-libtech/OLE-WORKSHOP/releases/download/0.1.0/oledocstore.war -P ${CATALINA_HOME}/webapps
 ```
 
-#####start tomcat
+#####Start tomcat
     cd $CATALINA_HOME/bin
     ./startup.sh
 
